# kevin_juniour-hardware

./: README.md  next.config.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/admin/dashboard/: page.tsx
app/admin/login/: page.tsx
app/admin/transactions/: page.tsx
app/pay/: page.tsx
app/pipe-and-fittings/: page.tsx
app/products/: page.tsx
app/products/air-tools/: page.tsx
app/products/cordless-tools/: page.tsx
app/products/generators/: page.tsx
app/products/measuring-tool/: page.tsx
app/products/power-tools/: page.tsx
app/products/product-accessories/: page.tsx
app/products/small-construction-equipment/: page.tsx
app/products/water-pump/: page.tsx
app/products/welding/: page.tsx
app/services/: page.tsx
app/solar-panels/: page.tsx
app/water-tanks/: page.tsx
backend/: =2.11.0  main.py  pyproject.toml  seed.py  seed_error.txt
backend/db/: database.py  models.py
backend/services/: auth.py  transactions.py
components/: DashboardCard.tsx  Footer.tsx  LoadingSkeleton.tsx  Navbar.tsx  RevenueChart.tsx  Sidebar.tsx  Toast.tsx  TransactionsTable.tsx  index.ts
lib/: constants.ts
